; ModuleID = '/home/carl/AnghaBench/glfw/deps/extr_glad_gl.c_glad_gl_get_extensions.c'
source_filename = "/home/carl/AnghaBench/glfw/deps/extr_glad_gl.c_glad_gl_get_extensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_EXTENSIONS = common dso_local global i32 0, align 4
@GL_NUM_EXTENSIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i32*, i8***)* @glad_gl_get_extensions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @glad_gl_get_extensions(i32 %0, i8** %1, i32* %2, i8*** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8***, align 8
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8*** %3, i8**** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32*, i32** %7, align 8
  %11 = load i8***, i8**** %8, align 8
  %12 = load i32, i32* @GL_EXTENSIONS, align 4
  %13 = call i64 @glGetString(i32 %12)
  %14 = inttoptr i64 %13 to i8*
  %15 = load i8**, i8*** %6, align 8
  store i8* %14, i8** %15, align 8
  ret i32 1
}

declare dso_local i64 @glGetString(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
